Add title for events template

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event.html
@@ -1,6 +1,7 @@
 {% extends "ndf/base.html" %}
 {% load i18n %}
 {% load ndf_tags %}
+{% block title %} {% trans "Events" %} {% endblock %}
 
 {% block style %}
   {{block.super}}
