--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event_create_edit.html
@@ -349,7 +349,7 @@
 
     var tim = 1000  
 
-    $('#invite_groupYes').click(function()
+    $('#open_eventYes').click(function()
           {
    
    $('label[for="has_attendees"]').fadeOut(tim);
@@ -359,7 +359,7 @@
    $('#panel_Basic').find('.small-5').find('#has_attendees').next().fadeOut(tim);
         });
 
-      $('#invite_groupNo').click(function()
+      $('#open_eventNo').click(function()
         {
   $('label[for="has_attendees"]').fadeIn(tim);
   $('#has_attendees').fadeIn(tim);
