Some functions optimisation

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/mio_index.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/mio_index.html
@@ -647,7 +647,7 @@ body{background-color:#ededf1}.mso h1{}.mso h1{font-family:sans-serif !important
       <div class="header" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 173000px);" id="emb-email-header-container">
       <!--[if (mso)|(IE)]><table align="center" class="header" cellpadding="0" cellspacing="0"><tr><td style="width: 600px"><![endif]-->
         <div class="logo emb-logo-margin-box" style="font-size: 26px;line-height: 32px;Margin-top: 6px;Margin-bottom: 20px;color: #c3ced9;font-family: Roboto,Tahoma,sans-serif;Margin-left: 20px;Margin-right: 20px;" align="center">
-          <div class="logo-center" style="font-size:0px !important;line-height:0 !important;" align="center" id="emb-email-header"><img style="height: auto;width: 100%;border: 0;max-width: 300px;" src="http://clix.tiss.edu/dev/ver1.0/wp-content/uploads/2015/11/Clix-logo-600x1401.png" alt="" width="300" /></div>
+          <div class="logo-center" style="font-size:0px !important;line-height:0 !important;" align="center" id="emb-email-header"><img style="height: auto;width: 100%;border: 0;max-width: 300px;" src="https://raw.githubusercontent.com/gnowledge/gstudio/mongokit/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/logo.svg" alt="" width="300" /></div>
         </div>
       <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
       </div>
