hardcoded value removed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -79,7 +79,7 @@
         <div class="row">
           <div class="columns small-12 medium-6">
             <span class="course-metric-heading">Comments for me</span>
-            <span class="course-metric-count cmnts_rcvd_by_user">0</span>
+            <span class="course-metric-count cmnts_rcvd_by_user">{{cmnts_rcvd_by_user}}</span>
           </div>
           {% comment %}
           <div class="columns small-12 medium-6">
