--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -4502,3 +4502,16 @@ course-title{
   max-height:100px;
   border: 1px solid !important;
 }
+
+.show-collection{
+    color:black!important;
+    font-size: 1.1em;
+    width:100%;
+    background-color: rgba(0, 0, 0, 0.8)!important;
+    //text-align:left;
+    display:inline-block;
+    margin-left:2px;
+    position:relative;
+    text-align:center;
+    border: 1px solid #eee;
+}
