script call moved to video thumbnail template itself

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/video_thumbnail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/video_thumbnail.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="/static/ndf/bower_components/blueimp-canvas-to-blob/js/canvas-to-blob.min.js"></script>
 <div class="large-12 columns">
   <div class="large-12 columns row">
         <div class="large-6 columns">
