--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_details_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_details_base.html
@@ -86,7 +86,8 @@
   {% if not 'video' in node.if_file.mime_type and not is_group  %}
     <dl class="accordion" data-accordion>
         <dd class="accordion-navigation" data-options="deep_linking:true">
-              <a href="#panel1" style="background-color: #2980B9; color:#FFF">Change Thumbnail</a>
+              <a href="#panel1" style="background-color: #2980B9; color:#FFF;width:70%!important">
+                <div style="font-size:13px">Change Thumbnail <i  style="float:right;font-size:13px" class= "fi-pencil"></i></div></a>
               <div id="panel1" class="content">
                           {% include "ndf/upload_pic_widget.html" with  node_id=node.pk url_name="file" widget_for="file_detail_view" is_banner=False is_profile=False is_thumbnail=True %}
               </div>
