--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_details_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_details_base.html
@@ -71,7 +71,8 @@
 
 
 {% block collection_content %}
-  {% if node.collection_set and not node.if_file.original.relurl %}
+  {% check_group node.pk as is_group %}
+  {% if node.collection_set and not node.if_file.original.relurl and not is_group %}
       <div class="show-collection">    
         <a class=" {% if node.collection_set %}collection-exists{% endif %}"  style="width:100%" data-oid="{{node.pk|safe}}">
          Show Collection
@@ -82,7 +83,6 @@
     
     {% include "ndf/collection_ajax_view.html" %}  
   </div>
-  {% check_group node.pk as is_group %}
   {% if not 'video' in node.if_file.mime_type and not is_group  %}
     <dl class="accordion" data-accordion>
         <dd class="accordion-navigation" data-options="deep_linking:true">
