--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
@@ -296,7 +296,7 @@
 
               <li>
                 <a href="#" data-reveal-id="add-buddy" data-reveal-ajax="{% url 'list_buddy' 'home' %}">
-                  + Add your buddy ({{request.session.buddies_authid_list|length}})
+                  My buddies ({{request.session.buddies_authid_list|length}})
                 </a>
 
                 <div id="add-buddy" class="reveal-modal tiny" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
