added script calls for ckeditor

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_field_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_field_widget.html
@@ -1,5 +1,7 @@
 {% load ndf_tags %}
 {% load i18n %}
+<script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
 
 <!-- Base fields / AttributeType fields -->
 {% if is_base_field or is_attribute_field %}
