--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/event.html
@@ -46,7 +46,8 @@
       {% endif %}
     {% else %}
     <li>
-    {% endif %}    
+    {% endif %}   
+    {% if not  each.name == "Inauguration"  or each.name == "Master Trainer Program" %} 
       <div class="row">
           <a class="small-6 columns" href="{% url 'event_list' groupid each.pk %}" title="View all {{each.name}}">
             {{each.name}}
@@ -65,6 +66,7 @@
           
           {% endif %}
       </div>
+      {% endif %}
   	</li>
     </a>
 
