default icon if prof pic is not there for metastudio is fixed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/upload_pic_widget.html
@@ -18,7 +18,11 @@
               {% elif node.if_file.mid.relurl %}
                    <img src="{{MEDIA_URL}}{{node.if_file.mid.relurl}}" alt="Profile picture for this group." class="img-height">
               {% else %}
-                   <img src="/static/ndf/images/default-bg.png" alt="Profile picture for this group." class="img-height">
+                   {% if site.SITE_NAME == 'metaStudio' %}
+                    <img src="/static/ndf/images/metaStudio-profile.png" alt="Profile picture for this group." class="img-height">
+                   {% else %}
+                    <img src="/static/ndf/images/default-bg.png" alt="Profile picture for this group." class="img-height">
+                  {% endif %}
               {% endif %}
           {% endif %}
         </div>
