--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
@@ -1,4 +1,4 @@
-{% load get_nroer_menu  get_user_group  get_group_object  get_existing_groups_excluded  get_profile_pic  get_gapps_iconbar user_access_policy get_user_object check_is_gstaff get_attribute_value get_sg_member_of get_relation_value from ndf_tags %}
+{% load get_nroer_menu  get_user_group  get_group_object  get_existing_groups_excluded  get_profile_pic  get_gapps_iconbar user_access_policy get_user_object check_is_gstaff get_attribute_value get_sg_member_of get_relation_value get_explore_url from ndf_tags %}
 {% load i18n %}
 {% load cache %}
 
@@ -181,6 +181,7 @@
 
         <!-- Current group selector -->
         {% if user.is_authenticated %}
+         {% get_explore_url as explore_url %}
             {% if site.MY_DASHBOARD_IN_HEADER %}
             <li>
               <a title="My Dashboard" class="{%if title == 'My Dashboard'%}active{%endif%}" href="{% url 'my_dashboard' request.user.id %}">
@@ -211,7 +212,7 @@
 
         <li class="group">
           {# <a title="" class="{%if title == 'Explore'%}active{%endif%}" href="{% url 'explore' %}"> #}
-          <a title="" class="{%if title == 'Explore'%}active{%endif%}" href="{% if site.SITE_NAME == 'metaStudio' %}{% url 'explore_groups' %}{% else %}{% url 'explore_courses' %}{% endif %}">
+          <a title="" class="{%if title == 'Explore'%}active{%endif%}" href="{% url explore_url %}">
             {% trans 'EXPLORE' %}
           </a>
         </li>
